fix: Align left
Closes #6

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -14,6 +14,7 @@
 }
 
 .App-header {
+  text-align: left;
   background:
   linear-gradient(to bottom, #87517f 0%, #513b4a 100%),
     linear-gradient( -45deg, #d62c35, transparent),
